--- a/jfugue-main/pom.xml
+++ b/jfugue-main/pom.xml
@@ -1,9 +1,22 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>de.alpharogroup</groupId>
-    <artifactId>jfugue-core</artifactId>
-    <version>5.0.7</version>
-  </parent>
-  <artifactId>jfugue-main</artifactId>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>de.alpharogroup</groupId>
+		<artifactId>jfugue-core</artifactId>
+		<version>5.0.7</version>
+	</parent>
+	<artifactId>jfugue-main</artifactId>
+
+
+	<dependencies>
+
+		<dependency>
+			<groupId>xom</groupId>
+			<artifactId>xom</artifactId>
+			<version>1.2.5</version>
+		</dependency>
+
+	</dependencies>
+	
 </project>
