--- a/jfugue-manualtest/pom.xml
+++ b/jfugue-manualtest/pom.xml
@@ -6,4 +6,15 @@
     <version>5.0.7</version>
   </parent>
   <artifactId>jfugue-manualtest</artifactId>
+  
+  
+	<dependencies>
+
+			<dependency>
+				<groupId>de.alpharogroup</groupId>
+				<artifactId>jfugue-main</artifactId>
+			</dependency>
+
+	</dependencies>
+	
 </project>
